2009-12-27  John W. Eaton  <jwe@octave.org>

	* Makefile.am (xgl2ps.c): New file.
	(EXTRA_DIST): Include gl2ps.c in the list.
	(DIST_SRC): Include xgl2ps.c in the list instead of gl2ps.c.

2009-12-27  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (decode_subscripts): Move to utils.cc.
	* utils.cc (decode_subscripts): New func.
	* utils.h: Declare it.
	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Optimize the 
	`cellfun (@subsref, args, {subs}, "uniformoutput", true)' case.

2009-12-26  Jaroslav Hajek  <highegg@gmail.com>

	* gripes.cc (gripe_nonbraced_cs_list_assignment): New function.
	* gripes.h: Declare it.
	* ov-cell.cc (octave_cell::subsasgn): Use it here.
	* ov-struct.cc (octave_struct::subsasgn): Also here.
	* pt-idx.cc (tree_simple_assignment::rvalue1): And here. Check for
	single lhs value.

2009-12-25  Jaroslav Hajek  <highegg@gmail.com>

	* ov-str-mat.h (octave_char_matrix_str::is_matrix_type): Remove
	override.
	* data.cc (Fismatrix): Update test.

2009-12-25  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/strfind.cc: New source.
	* DLD-FUNCTIONS/module-files: Add it here.

2009-12-23  John W. Eaton  <jwe@octave.org>

	* lex.ll: Use %top block to include config.h.

2009-12-16  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/max.cc (do_cumminmax_body): Support also btyp_bool.

2009-12-22  Rob Mahurin  <octave@tertiarysource.net>

	* find-defun-files.sh: Use SED and EGREP as returned by configure.

2009-12-20  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_sindow::set_name): New method.
	(figure_manager::set_name, figure_manage::do_set_name): New methods.
	(fltk_backend::property_changed): Handle change of figure title string.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Eliminate TOPDIR variable in favor of built-in automake
	variables of top_builddir and top_srcdir.

2009-12-18  David Grundberg  <davidg@cs.umu.se>

	* ov-usr-fcn.cc (octave_user_script::do_multi_index_op):