@@ -1,3 +1,8 @@
+2009-12-28  Thomas Treichl  <Thomas.Treichl@gmx.net>
+
+	* DLD-FUNCTIONS/md5sum.cc, DLD-FUNCTIONS/lookup.cc: Include
+	config.h before another header file.
+
 2009-12-27  John W. Eaton  <jwe@octave.org>
 
 	* Makefile.am (xgl2ps.c): New file.
